create github pages

--- a/page3.html
+++ b/page3.html
@@ -27,7 +27,7 @@
   
 </head>
 <body>
-  <section id="ext_menu-g" data-rv-view="61">
+  <section id="ext_menu-g" data-rv-view="94">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONÓCENOS</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">NUESTROS AUTORES</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="page4.html">ADQUIRIR</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONÓCENOS</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">NUESTROS AUTORES</a></li><li class="nav-item"><a class="nav-link link" href="page5.html">BRAND CENTER</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="page4.html">ADQUIRIR</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,19 +60,19 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="content8-m" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" data-rv-view="63" style="padding-top: 160px; padding-bottom: 80px;">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-section mbr-after-navbar" id="content8-m" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" data-rv-view="96" style="padding-top: 160px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
     </div>
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Conócenos</h3>
-        <div class="lead"><p>Una nueva generación de jóvenes escritores está&nbsp;<span style="font-size: 1.07rem;">emergiendo, y su irrupción en el campo de la liter</span><span style="font-size: 1.07rem;">atura se deja sentir hace tiempo y de diversas formas.&nbsp;</span><span style="font-size: 1.07rem;">Herederas de una vigorosa tradición literaria, pero&nbsp;</span><span style="font-size: 1.07rem;">con la mirada dirigida hacia el futuro, Cardenal es un&nbsp;</span><span style="font-size: 1.07rem;">síntoma inequívoco de ello.&nbsp;</span><span style="font-size: 1.07rem;">Frente a todos estos obstáculos, y de manera con</span><span style="font-size: 1.07rem;">trafactual, se alza el vuelo del cardenal junto con su&nbsp;</span><span style="font-size: 1.07rem;">particular trino. Canto inconforme, pero propositivo;&nbsp;</span><span style="font-size: 1.07rem;">inquieto, pero sereno: lo que el lector tiene en sus&nbsp;</span><span style="font-size: 1.07rem;">manos no es otra cosa que un trinar polifónico con las&nbsp;</span><span style="font-size: 1.07rem;">agallas suficientes para adaptarse al cambio de las&nbsp;</span><span style="font-size: 1.07rem;">estaciones y el soplar de los vientos, pero siempre fiel&nbsp;</span><span style="font-size: 1.07rem;">a su búsqueda de la libertad y en defensa de lo bello,&nbsp;</span><span style="font-size: 1.07rem;">haciendo caso omiso de las estéticas canonizadas y&nbsp;</span><span style="font-size: 1.07rem;">los espacios predefinidos para la creatividad, pero&nbsp;</span><span style="font-size: 1.07rem;">sobre todo, atendiedo al canto de los poetas jóvenes&nbsp;</span><span style="font-size: 1.07rem;">que tienen mucho que decir, pero pocas veces son escuchados.</span></p></div>
+        <div class="lead"><p>Una nueva generación de jóvenes escritores está&nbsp;<span style="font-size: 1.07rem;">emergiendo, y su irrupción en el campo de la liter</span><span style="font-size: 1.07rem;">atura se deja sentir hace tiempo y de diversas formas.&nbsp;</span><span style="font-size: 1.07rem;">Heredera de una vigorosa tradición literaria, pero&nbsp;</span><span style="font-size: 1.07rem;">con la mirada dirigida hacia el futuro, Cardenal es un&nbsp;</span><span style="font-size: 1.07rem;">síntoma inequívoco de ello.&nbsp;</span><span style="font-size: 1.07rem;">Frente a todos estos obstáculos, y de manera con</span><span style="font-size: 1.07rem;">trafactual, se alza el vuelo del cardenal junto con su&nbsp;</span><span style="font-size: 1.07rem;">particular trino. Canto inconforme, pero propositivo;&nbsp;</span><span style="font-size: 1.07rem;">inquieto, pero sereno: lo que el lector tiene en sus&nbsp;</span><span style="font-size: 1.07rem;">manos no es otra cosa que un trinar polifónico con las&nbsp;</span><span style="font-size: 1.07rem;">agallas suficientes para adaptarse al cambio de las&nbsp;</span><span style="font-size: 1.07rem;">estaciones y el soplar de los vientos, pero siempre fiel&nbsp;</span><span style="font-size: 1.07rem;">a su búsqueda de la libertad y en defensa de lo bello,&nbsp;</span><span style="font-size: 1.07rem;">haciendo caso omiso de las estéticas canonizadas y&nbsp;</span><span style="font-size: 1.07rem;">los espacios predefinidos para la creatividad, pero&nbsp;</span><span style="font-size: 1.07rem;">sobre todo, atendiedo al canto de los poetas jóvenes&nbsp;</span><span style="font-size: 1.07rem;">que tienen mucho que decir, pero pocas veces son escuchados.</span></p></div>
     </div>
 
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding" id="features4-q" data-rv-view="66" style="background-color: rgb(251, 250, 250);">
+<section class="mbr-cards mbr-section mbr-section-nopadding" id="features4-q" data-rv-view="99" style="background-color: rgb(251, 250, 250);">
 
     
 
@@ -131,7 +131,7 @@ Los textos presentados en la revista son creaciones originales de nuestros colab
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-h" data-rv-view="69" style="background-color: rgb(31, 9, 12); padding-top: 60px; padding-bottom: 30px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-h" data-rv-view="102" style="background-color: rgb(31, 9, 12); padding-top: 60px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
@@ -164,7 +164,7 @@ Los textos presentados en la revista son creaciones originales de nuestros colab
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
