create github pages

--- a/page3.html
+++ b/page3.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-section mbr-after-navbar" id="content8-m" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" data-rv-view="96" style="padding-top: 160px; padding-bottom: 80px;">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="mbr-section mbr-after-navbar" id="content8-m" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" data-rv-view="96" style="padding-top: 160px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
     </div>
