create github pages

--- a/page4.html
+++ b/page4.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="ext_menu-k" data-rv-view="107">
+  <section id="ext_menu-k" data-rv-view="163">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONÓCENOS</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">NUESTROS AUTORES</a></li><li class="nav-item"><a class="nav-link link" href="page5.html">BRAND CENTER</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="page4.html">ADQUIRIR</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONÓCENOS</a>   </li><li class="nav-item"><a class="nav-link link" href="page2.html">NUESTROS AUTORES</a></li><li class="nav-item"><a class="nav-link link" href="page5.html"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="page4.html">ADQUIRIR</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-r" data-rv-view="104" style="background-color: rgb(251, 250, 250);">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-r" data-rv-view="160" style="background-color: rgb(251, 250, 250);">
 
     
 
@@ -102,7 +102,7 @@ diferentes manifestaciones posibilite que los jóvenes podamos aprender de los m
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-l" data-rv-view="109" style="background-color: rgb(31, 9, 12); padding-top: 60px; padding-bottom: 30px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-l" data-rv-view="165" style="background-color: rgb(31, 9, 12); padding-top: 60px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
