--- a/page2.html
+++ b/page2.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="ext_menu-e" data-rv-view="90">
+  <section id="ext_menu-e" data-rv-view="156">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONÓCENOS</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">NUESTROS AUTORES</a></li><li class="nav-item"><a class="nav-link link" href="page5.html">BRAND CENTER</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="page4.html">ADQUIRIR</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONÓCENOS</a>   </li><li class="nav-item"><a class="nav-link link" href="page2.html">NUESTROS AUTORES</a></li><li class="nav-item"><a class="nav-link link" href="page5.html"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="page4.html">ADQUIRIR</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section mbr-after-navbar" id="testimonials3-p" data-rv-view="51" style="background-color: rgb(251, 250, 250); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.info/e">make your own website</a></section><section class="mbr-section mbr-after-navbar" id="testimonials3-p" data-rv-view="117" style="background-color: rgb(251, 250, 250); padding-top: 120px; padding-bottom: 40px;">
 
     
 
@@ -279,7 +279,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-f" data-rv-view="92" style="background-color: rgb(31, 9, 12); padding-top: 60px; padding-bottom: 30px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-f" data-rv-view="158" style="background-color: rgb(31, 9, 12); padding-top: 60px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
