--- a/page3.html
+++ b/page3.html
@@ -154,7 +154,7 @@ Los textos presentados en la revista son creaciones originales de nuestros colab
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">Brand Center</h3>
-                <div class="lead">El primer paso a la libertad ideológica es la expresión.</div>
+                <div class="lead"><p>El primer paso a la libertad ideológica es la expresión.<br></p></div>
                 <div><a class="btn btn-danger" href="assets/files/PCEA-CardenalVertical.pdf" target="_blank">ACCEDER</a></div>
             </div>
         </div>
