--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONÓCENOS</a>   </li><li class="nav-item"><a class="nav-link link" href="page2.html">NUESTROS AUTORES</a></li><li class="nav-item"><a class="nav-link link" href="page5.html"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="page4.html">ADQUIRIR</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONÓCENOS</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">NUESTROS AUTORES</a></li><li class="nav-item"><a class="nav-link link" href="page5.html"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="page4.html">ADQUIRIR</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header5-3" data-rv-view="0" style="background-image: url(assets/images/fondo-web-2000x1224.jpg);">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header5-3" data-rv-view="0" style="background-image: url(assets/images/fondo-web-2000x1224.jpg);">
 
     
 
@@ -106,7 +106,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="FORMA DE CONTACTO">
 
-                        <input type="hidden" value="NV8NStlu1xyEvvy5BTjvJrUVBHjTzIuDTySW6BKmCqgbbzFrH/sZk8h4L/r5HDwvHcSdtEpaBfKeKzGy7mYnmWzAQpix4mGtJMa3Egl0J7Ux61P7HxovKw+l1tNL7/JD" data-form-email="true">
+                        <input type="hidden" value="D3mVKbOtQB0klQGvTi/HTunlozi1c7LfVvvKe6A67/hU2YSDX3ZyNu7EEF82aAOH69IjjNBcHg0Gu8ORIkGBvWnZBii5TZ961t+hGaG6zcr2Jcb44wSnruv9SsISA2ca" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -193,7 +193,7 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
