--- a/page4.html
+++ b/page4.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="ext_menu-k" data-rv-view="163">
+  <section id="ext_menu-k" data-rv-view="54">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONÓCENOS</a>   </li><li class="nav-item"><a class="nav-link link" href="page2.html">NUESTROS AUTORES</a></li><li class="nav-item"><a class="nav-link link" href="page5.html"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="page4.html">ADQUIRIR</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONÓCENOS</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">NUESTROS AUTORES</a></li><li class="nav-item"><a class="nav-link link" href="page5.html"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="page4.html">ADQUIRIR</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-r" data-rv-view="160" style="background-color: rgb(251, 250, 250);">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-r" data-rv-view="51" style="background-color: rgb(251, 250, 250);">
 
     
 
@@ -70,12 +70,14 @@
                   <div class="card-block">
                     <h4 class="card-title">Número 2</h4>
                     <h5 class="card-subtitle">Noviembre 2019</h5>
-                    <p class="card-text">Hay en las páginas de este segundo número dos
-escritores consagrados: la poeta Roxana Elvridge-Thomas y el novelista Mario Bellatin. A su lado,
-en Cardinalidae cornu, brillan con propia luz ocho
-jóvenes poetas entre los que se encuentran estudiantes universitarios, editores y docentes de nuestro país. Hombro con hombro también se erige la sección de narrativa Passeri plectrum, que se nutre
-con las colaboraciones de David Espino Lozada y
-Andrea Fischer.</p>
+                    <p class="card-text">En el Comité Editorial de Cardenal
+estamos profundamente agradecidos con la gran acogida que tuvo el primer número de la revista
+en diferentes espacios como la Ñibrería Jorge Cuesta, la
+UAM- Iztapalapa y el Museo Iconográfico del Quijote,
+en Guanajuato. Conscientes de la gran responsabilidad
+que ello implica hemos redoblado nuestros esfuerzos,
+pues estamos decididos a corresponder con la exigencia
+de nuestros lectores.</p>
                     <div class="card-btn"><a href="https://mobirise.com" class="btn btn-danger">COMPRAR</a></div>
                     </div>
                 </div>
@@ -84,12 +86,11 @@ Andrea Fischer.</p>
         <div class="mbr-cards-col col-xs-12 col-lg-6" style="padding-top: 80px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/descarga-2-170x260.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/portada-1-2-1-170x257.png" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Número 3</h4>
                         <h5 class="card-subtitle">Junio 2020</h5>
-                        <p class="card-text">Fieles a nuestros objetivos, y en busca de mantener las mentes abiertas en estos tiempos de confinamiento, esta edición especial busca reforzar los vínculos entre los escritores más importantes de México y la emergente generación literaria. Es un proyecto que conjunta el esfuerzo y dedicación de muchas personas para albergar punto de encuentro donde la literatura en sus
-diferentes manifestaciones posibilite que los jóvenes podamos aprender de los más experimentados, y viceversa.</p>
+                        <p class="card-text">El compromiso de dar voz a todos los autores, sean emergentes o consagrados, siempre ha sido el objetivo fundamental de Cardenal, Revista Literaria, sin embargo, a partir del desarrollo de un Plan de Comunicación Estratégica Aplicada, nos dimos cuenta que nuestra identidad gráfica y corporativa, no lo transmitía en su totalidad. Como resultado, lanzamos este número especial, no solo para presentar frente a nuestros lectores los nuevos identificadores visuales de la revista, sino también para recordarles, ahora más que nunca, que queremos difundir su palabra, escucharlos a todos y darles voz.</p>
                         <div class="card-btn"><a href="https://mobirise.com" class="btn btn-danger">COMPRAR</a></div>
                     </div>
                 </div>
@@ -102,7 +103,7 @@ diferentes manifestaciones posibilite que los jóvenes podamos aprender de los m
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-l" data-rv-view="165" style="background-color: rgb(31, 9, 12); padding-top: 60px; padding-bottom: 30px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-l" data-rv-view="56" style="background-color: rgb(31, 9, 12); padding-top: 60px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
@@ -134,7 +135,7 @@ diferentes manifestaciones posibilite que los jóvenes podamos aprender de los m
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
